--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </div>
-        <div class="row align-items-center">
+        <div class="row align-items-center flex-wrap-reverse">
             <div class="col-12 col-md-6 px-0 txt-color">
                 <div class="px-5 mx-5 responsive-mine">
                     <h3 class="py-2">pusblicsector & infrastructure</h3>
