--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
                                 <option value="6">Pioneer</option>
                             </select>
                             <div class="row pt-4">
-                                <div class="col">
+                                <div class="col-12 col-md-6">
                                     <label for="exampleFormControlInput1" class="form-label">First Name</label>
                                     <input type="text" class="form-control" required="required" aria-label="First name">
                                 </div>
-                                <div class="col">
+                                <div class="col-12 col-md-6">
                                     <label for="exampleFormControlInput1" class="form-label">Last Name</label>
                                     <input type="text" class="form-control" required="required" aria-label="Last name">
                                 </div>
