--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@
                                 <option value="5">AWS</option>
                                 <option value="6">Pioneer</option>
                             </select>
-                            <div class="row pt-4">
+                            <div class="row">
                                 <div class="col-12 col-md-6">
-                                    <label for="exampleFormControlInput1" class="form-label">First Name</label>
+                                    <label for="exampleFormControlInput1" class="form-label pt-4">First Name</label>
                                     <input type="text" class="form-control" required="required" aria-label="First name">
                                 </div>
                                 <div class="col-12 col-md-6">
-                                    <label for="exampleFormControlInput1" class="form-label">Last Name</label>
+                                    <label for="exampleFormControlInput1" class="form-label pt-4">Last Name</label>
                                     <input type="text" class="form-control" required="required" aria-label="Last name">
                                 </div>
                             </div>
